added CSS styling

--- a/views/sign_up.html
+++ b/views/sign_up.html
@@ -1,3 +1,10 @@
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../css/app.css">
+    <title>Quiz Generator</title>
+</head>
+
+
 <body>
     <h1>Sign-up for Quiz App!</h1>
 
