--- a/views/quiz.html
+++ b/views/quiz.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="../css/app.css">
         <title>Quiz Generator</title>
     </head>
 
     <body>
-        <h1>Quiz Time!</h1>
+        <h1 class="centered-heading">Quiz Time!</h1>
         <div id="questions-container"></div>
 
         
     </body>
     <script defer type="text/javascript" src="../src/quiz.js" charset="utf-8"></script>
-    
+
 </html>
