--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,13 +1,23 @@
-<h1>Welcome to Quiz App!</h1>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../css/app.css">
+    <title>Quiz Generator</title>
+</head>
+<body id="sign-in">
+    <h1 class="centered-heading">Welcome to Quizly!</h1>
 
-<div>
-    <form id="sign-in">
-        <label for="username">Username:</label>
-        <input type="text">
-    </form>
-</div>
+    <div id="sign-in">
+        <form id="sign-in">
+            <label for="username">Username:</label>
+            <input type="text"><br><br>
+            <input type="submit" value="Sign-in" />
+        </form>
 
-<p>Don't have an account?</p>
-<form action="sign_up.html">
-    <input type="submit" value="Sign-up here!" />
-</form>
+        <div id="new-user-form">
+            <h3>Don't have an account?</h3>
+            <form action="sign_up.html">
+                <input type="submit" value="Sign-up here!" />
+            </form>
+        </div>
+    </div>
+</body>
