--- a/views/sign_up.html
+++ b/views/sign_up.html
@@ -5,20 +5,20 @@
 </head>
 
 
-<body>
-    <h1>Sign-up for Quiz App!</h1>
+<body id="sign-up">
+    <h1>Sign up for Quizly</h1>
 
     <div>
         <form id="sign-up">
             <label for="first_name">First Name:</label>
-            <input type="text" id="first_name"><br>
+            <input type="text" id="first_name"><br><br>
             <label for="last_name">Last Name:</label>
-            <input type="text"  id="last_name"><br>
+            <input type="text"  id="last_name"><br><br>
             <label for="username">Username:</label>
-            <input type="text" id="username"><br>
+            <input type="text" id="username"><br><br>
             <label for="email">Email:</label>
-            <input type="text" id="email"><br>
-            <input type="submit" value="Sign-up!"><br>
+            <input type="text" id="email"><br><br>
+            <input type="submit" value="Sign up!"><br>
         </form>
     </div>
 
