Quiz fully functional

--- a/views/quiz.html
+++ b/views/quiz.html
@@ -9,6 +9,7 @@
     <body>
         <h1 class="centered-heading">Quiz Time!</h1>
         <div id="questions-container"></div>
+        <button type="button" id="submit-quiz-button">Get your quiz results!</button>
 
         
     </body>
