Reg vs timed quiz basics are functioning

--- a/views/quiz.html
+++ b/views/quiz.html
@@ -13,5 +13,6 @@
 
         
     </body>
+    <script defer type="text/javascript" src="../src/common.js" charset="utf-8"></script>
     <script defer type="text/javascript" src="../src/quiz.js" charset="utf-8"></script>
 </html>
