--- a/views/timedquiz.html
+++ b/views/timedquiz.html
@@ -1,6 +1,6 @@
 <!-- Task Block A:
-1. Create a new html page for timed quiz
-2. Do a fetch request for 50 questions, and make a new array for correct answers with50 placeholders
+1. Create a new html page for timed quiz ✓
+2. Do a fetch request for 50 questions, and make a new array for correct answers with50 placeholders ✓
 3. Figure out how to render 1 question at a time
 4. Figure out how to track score (try to resuse old methods) 
 5. Create css page or update existing to make quiz page prettier -->
@@ -11,6 +11,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="../css/app.css">
+
         <title>Quiz Generator</title>
     </head>
 
@@ -38,6 +39,7 @@
 
         
     </body>
+    <script defer type="text/javascript" src="../src/common.js" charset="utf-8"></script>
     <script defer type="text/javascript" src="../src/timedquiz.js" charset="utf-8"></script>
 </html>
 
