--- a/views/timedquiz.html
+++ b/views/timedquiz.html
@@ -18,24 +18,28 @@
     <body>
         <h1 class="centered-heading">Quiz Time!</h1>
         <h3>See how many questions you can answer in 60 seconds!</h3>
+        <button type="button" id="start-timer">Start!</button><br>
+
         <div id="question-container">
-            <form id="answers-form">
+            <form hidden id="answers-form">
                 <p id="question-text">Question placeholder</p>
-                <input type="radio" id="q1" name="choice">
+                <input type="radio" class="radio-node" id="q1" name="choice">
                 <label for="q1">Test</label><br>
 
-                <input type="radio" id="q2" name="choice">
+                <input type="radio" class="radio-node" id="q2" name="choice">
                 <label for="q2">Test</label><br>
 
-                <input type="radio" id="q3" name="choice">
+                <input type="radio" class="radio-node" id="q3" name="choice">
                 <label for="q3">Test</label><br>
                 
-                <input type="radio" id="q4" name="choice">
+                <input type="radio" class="radio-node" id="q4" name="choice">
                 <label for="q4">Test</label>
-              </form>
+            </form>
+        </div><br><br>
+        <div id="timer-container">
+            <h1 id="timer"></h1>
         </div>
         
-        <button type="button" id="submit-quiz-button">Get your quiz results!</button>
 
         
     </body>
