--- a/views/timedquiz.html
+++ b/views/timedquiz.html
@@ -1,11 +1,3 @@
-<!-- Task Block A:
-1. Create a new html page for timed quiz ✓
-2. Do a fetch request for 50 questions, and make a new array for correct answers with50 placeholders ✓
-3. Figure out how to render 1 question at a time
-4. Figure out how to track score (try to resuse old methods) 
-5. Create css page or update existing to make quiz page prettier -->
-
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -15,7 +7,7 @@
         <title>Quiz Generator</title>
     </head>
 
-    <body>
+    <body id="timed-quiz-body">
         <h1 class="centered-heading">Quiz Time!</h1>
         <h3>See how many questions you can answer in 60 seconds!</h3>
         <button type="button" id="start-timer">Start!</button><br>
