Progress bar + some css

--- a/views/timedquiz.html
+++ b/views/timedquiz.html
@@ -8,7 +8,7 @@
     </head>
 
     <body id="timed-quiz-body">
-        <h1 class="centered-heading">Quiz Time!</h1>
+        <h1 id="quiz-time" class="centered-heading">Quiz Time!</h1>
         <h3>See how many questions you can answer in 60 seconds!</h3>
         <button type="button" id="start-timer">Start!</button><br>
 
@@ -31,6 +31,9 @@
         <div id="timer-container">
             <h1 id="timer"></h1>
         </div>
+        <table>
+            <tr id="progress-bar"></tr>
+        </table>
         
 
         
