--- a/css/app.css
+++ b/css/app.css
@@ -65,3 +65,23 @@ body#sign-up {
 #leaderboard{
     text-align: center;
 }
+
+tr.noBorder td {
+    border: 0;
+  }
+
+.green-dot {
+    height: 25px;
+    width: 25px;
+    background-color: green;
+    border-radius: 50%;
+    display: inline-block;
+    }
+
+.red-dot {
+    height: 25px;
+    width: 25px;
+    background-color:red;
+    border-radius: 50%;
+    display: inline-block;
+    }
