--- a/css/app.css
+++ b/css/app.css
@@ -103,12 +103,66 @@ tr.noBorder td {
 } */
 
 /* Table */
-
+/* 
 .table-element {
     text-align: left;
 
-}
+} */
 
+table {
+    table-layout: fixed;
+    width: 75%;
+    border-collapse: collapse;
+  }
+  
+  thead th:nth-child(1) {
+    width: 30%;
+  }
+  
+  thead th:nth-child(2) {
+    width: 20%;
+  }
+  
+  thead th:nth-child(3) {
+    width: 15%;
+  }
+  
+  thead th:nth-child(4) {
+    width: 35%;
+  }
+  
+  th, td {
+    padding: 20px;
+  }
+
+  /* typography */
+
+html {
+    font-family: 'helvetica neue', helvetica, arial, sans-serif;
+  }
+  
+  thead th, tfoot th {
+    font-family: 'Rock Salt', cursive;
+  }
+  
+  th {
+    letter-spacing: 2px;
+  }
+  
+  td {
+    letter-spacing: 1px;
+  }
+  
+  tbody td {
+    text-align: center;
+  }
+  
+  tfoot th {
+    text-align: right;
+  }
+
+
+  
 
 /* Toggle Switch */
 
